Spark started sparking